Thu Dec 10 17:35:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_multicast.mpb:

          Fixed incorrect after directive.

Thu Dec 10 16:49:32 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/RandomGenerator.cpp:

          Dropped obviated include by previous commit.

Thu Dec 10 15:24:49 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/RandomGenerator.cpp:

          Change from using std::time to ACE_OS::time.  std::time
          does not work on WinCE.

Wed Dec  9 22:32:00 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.h:

          Added vector include to fix compilation errors.

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fixed compilation errors on wchar build.

Wed Dec  9 19:03:17 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/datamodel.txt:
        * performance-tests/Bench/src/EntityProfiles.h:
        * performance-tests/Bench/src/Options.cpp:

          Corrected documentation.

Wed Dec  9 18:53:40 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/datamodel.txt:
        * performance-tests/Bench/src/EntityProfiles.h:
        * performance-tests/Bench/src/Gaussian.cpp:
        * performance-tests/Bench/src/Options.cpp:
        * performance-tests/Bench/src/Publication.cpp:

          Added new FixedRate publication parameter to allow
          specification of fixed sending rates.

Wed Dec  9 17:22:09 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Clarified member names.

Wed Dec  9 16:49:06 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Applied minor optimization to send_naks.
